Use Base64.getEncoder().encodeToString() instead of DatatypeConverter.printBase64Binary()